--- a/cast-custom-receiver/file.html
+++ b/cast-custom-receiver/file.html
@@ -22,6 +22,7 @@ limitations under the License.
   <body>
 	<div id="message">Talk to me</div>
     <script type="text/javascript" src="//www.gstatic.com/cast/sdk/libs/receiver/2.0.0/cast_receiver.js"></script>
-    <script type="text/javascript" src="chromecast.js"></script>
+    <script type="text/javascript" src="chromecast/chromecast.js"></script>
+    <script type="text/javascript" src="view/view.js"></script>
   </body>
 </html>
