--- a/cast-custom-receiver/file.html
+++ b/cast-custom-receiver/file.html
@@ -21,6 +21,7 @@ limitations under the License.
   </head>
   <body>
 	<div id="message">Talk to me</div>
+    <div id="connectDevices"></div>
     <script type="text/javascript" src="//www.gstatic.com/cast/sdk/libs/receiver/2.0.0/cast_receiver.js"></script>
     <script type="text/javascript" src="chromecast/chromecast.js"></script>
     <script type="text/javascript" src="view/view.js"></script>
