Moved some stuff around

--- a/cast-custom-receiver/file.html
+++ b/cast-custom-receiver/file.html
@@ -23,7 +23,11 @@ limitations under the License.
 	<div id="message">Talk to me</div>
     <div id="connectedDevices">3 devices</div>
     <script type="text/javascript" src="//www.gstatic.com/cast/sdk/libs/receiver/2.0.0/cast_receiver.js"></script>
-    <script type="text/javascript" src="chromecast/chromecast.js"></script>
-    <script type="text/javascript" src="view/view.js"></script>
+    <script type='text/javascript' src='lib/knockout-3.1.0.js'></script>
+    <script type='text/javascript' src='lib/jquery-2.1.1.js'></script>
+    <script type="text/javascript" src="js/chromecast/chromecast.js"></script>
+    <script type="text/javascript" src="js/viewModels/model.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/view.js"></script>
   </body>
 </html>
