--- a/cast-custom-receiver/file.html
+++ b/cast-custom-receiver/file.html
@@ -20,7 +20,7 @@ limitations under the License.
     <title>Cast Hello Text</title>
   </head>
   <body>
-	<div id="message" data-bind="text: text">Talk to me</div>
+	<div id="message" data-bind="text: displayText">Talk to me</div>
     <div id="connectedDevices">3 devices</div>
     <script type="text/javascript" src="//www.gstatic.com/cast/sdk/libs/receiver/2.0.0/cast_receiver.js"></script>
     <script type='text/javascript' src='lib/knockout-3.1.0.js'></script>
