--- a/cast-custom-receiver/file.html
+++ b/cast-custom-receiver/file.html
@@ -32,6 +32,8 @@ limitations under the License.
             Waiting for all players to join...
         </div>
     <!-- /ko -->
+    <div class="numConnections" data-bind="text: clients.length">
+    </div>
     <script type="text/javascript" src="//www.gstatic.com/cast/sdk/libs/receiver/2.0.0/cast_receiver.js"></script>
     <script type='text/javascript' src='lib/knockout-3.1.0.js'></script>
     <script type='text/javascript' src='lib/jquery-2.1.1.js'></script>
