--- a/cast-custom-receiver/file.html
+++ b/cast-custom-receiver/file.html
@@ -34,6 +34,7 @@ limitations under the License.
     <!-- /ko -->
     <div id="numConnections">
     </div>
+    <script type="text/javascript" src="white cards.txt"></script>
     <script type="text/javascript" src="//www.gstatic.com/cast/sdk/libs/receiver/2.0.0/cast_receiver.js"></script>
     <script type='text/javascript' src='lib/knockout-3.1.0.js'></script>
     <script type='text/javascript' src='lib/jquery-2.1.1.js'></script>
