--- a/cast-custom-receiver/file.html
+++ b/cast-custom-receiver/file.html
@@ -32,8 +32,11 @@ limitations under the License.
             Waiting for all players to join...
         </div>
     <!-- /ko -->
-    <div id="numConnections">
-    </div>
+    <!-- ko if: allCardsSubmitted -->
+        <div class="message">
+            All Cards Submitted!
+        </div>
+    <!-- /ko -->
     <script type="text/javascript" src="white cards.txt"></script>
     <script type="text/javascript" src="//www.gstatic.com/cast/sdk/libs/receiver/2.0.0/cast_receiver.js"></script>
     <script type='text/javascript' src='lib/knockout-3.1.0.js'></script>
