all cards submitted

--- a/cast-custom-receiver/file.html
+++ b/cast-custom-receiver/file.html
@@ -33,7 +33,7 @@ limitations under the License.
         </div>
     <!-- /ko -->
     <!-- ko if: allCardsSubmitted -->
-        <div class="message">
+        <div class="message" style="z-index:100">
             All Cards Submitted!
         </div>
     <!-- /ko -->
