--- a/cast-custom-receiver/file.html
+++ b/cast-custom-receiver/file.html
@@ -30,7 +30,7 @@ limitations under the License.
     <!-- ko ifnot: ready -->
         <div class="message">
             Waiting for all players to join...<br>
-            Connected Players: <span data-bind="text: clients.length"></span>
+            Connected Players: <span data-bind="text: clients().length"></span>
         </div>
     <!-- /ko -->
     <!-- ko if: allCardsSubmitted -->
