all cards submitted

--- a/cast-custom-receiver/file.html
+++ b/cast-custom-receiver/file.html
@@ -34,7 +34,7 @@ limitations under the License.
         </div>
     <!-- /ko -->
     <!-- ko if: allCardsSubmitted -->
-        <div class="message" style="z-index:100">
+        <div class="toast">
             All Cards Submitted!
         </div>
     <!-- /ko -->
