all cards submitted

--- a/cast-custom-receiver/file.html
+++ b/cast-custom-receiver/file.html
@@ -25,7 +25,7 @@ limitations under the License.
             <!-- ko foreach: deck -->
                 <div class="card" data-bind="
                     style: {
-                        '-webkit-transform':'rotate(5deg)';
+                        webkitTransform:'rotate(5deg)';
                     }">
                     <span data-bind="text: name"></span>
                     <img src="img/logo-full.png">
