all cards submitted

--- a/cast-custom-receiver/file.html
+++ b/cast-custom-receiver/file.html
@@ -25,8 +25,11 @@ limitations under the License.
             <!-- ko foreach: deck -->
                 <div class="card" data-bind="
                     style: {
-                        webkitTransform:'rotate(5deg)';
-                    }">
+                       '-webkit-transform': rotationCss(),
+                       '-o-transform': rotationCss(),
+                       'transform': rotationCss(),
+                       'MozTransform': rotationCss()
+                ">
                     <span data-bind="text: name"></span>
                     <img src="img/logo-full.png">
                 </div>
