--- a/cast-custom-receiver/file.html
+++ b/cast-custom-receiver/file.html
@@ -25,10 +25,10 @@ limitations under the License.
             <!-- ko foreach: deck -->
                 <div class="card" data-bind="
                     style: {
-                       '-webkit-transform': rotationCss(),
-                       '-o-transform': rotationCss(),
-                       'transform': rotationCss(),
-                       'MozTransform': rotationCss()
+                       '-webkit-transform': $parent.rotationCss(),
+                       '-o-transform': $parent.rotationCss(),
+                       'transform': $parent.rotationCss(),
+                       'MozTransform': $parent.rotationCss()
                 ">
                     <span data-bind="text: name"></span>
                     <img src="img/logo-full.png">
