--- a/cast-custom-receiver/file.html
+++ b/cast-custom-receiver/file.html
@@ -23,15 +23,9 @@ limitations under the License.
     <!-- ko if: ready -->
         <div id="cardContainer">
             <!-- ko foreach: deck -->
-                <div class="card" data-bind="
-                    style: {
-                       '-webkit-transform': rotationCss(),
-                       '-o-transform': rotationCss(),
-                       'transform': rotationCss(),
-                       'MozTransform': rotationCss()
-                ">
+                <div class="card">
                     <span data-bind="text: name"></span>
-                    <img src="img/logo-full.png">
+                    <img src="img/logo_full.png">
                 </div>
             <!-- /ko -->
         </div>
