all cards submitted

--- a/cast-custom-receiver/file.html
+++ b/cast-custom-receiver/file.html
@@ -29,6 +29,16 @@ limitations under the License.
                 </div>
             <!-- /ko -->
         </div>
+        <div id="currentScore">
+            <table>
+            <!-- ko foreach: clients -->
+                <tr>
+                    <td>Player 1:</td>
+                    <td style="font-weight:bold">4</td>
+                </tr>
+            <!-- /ko -->
+            </table>
+        </div>
     <!-- /ko -->
     <!-- ko ifnot: ready -->
         <div class="message">
