--- a/cast-custom-receiver/file.html
+++ b/cast-custom-receiver/file.html
@@ -51,7 +51,8 @@ limitations under the License.
             All Cards Submitted!
         </div>
     <!-- /ko -->
-    <script type="text/javascript" src="white cards.txt"></script>
+    <script type="text/javascript" src="white cards.js"></script>
+    <script type="text/javascript" src="black cards.js"></script>
     <script type="text/javascript" src="//www.gstatic.com/cast/sdk/libs/receiver/2.0.0/cast_receiver.js"></script>
     <script type='text/javascript' src='lib/knockout-3.1.0.js'></script>
     <script type='text/javascript' src='lib/jquery-2.1.1.js'></script>
