all cards submitted

--- a/cast-custom-receiver/file.html
+++ b/cast-custom-receiver/file.html
@@ -27,7 +27,7 @@ limitations under the License.
                     style: {
                         'background-color': color,
                         'color': function() {
-                            return (color() == 'black') ? 'white' : 'black'
+                            return (color() == 'black') ? 'black' : 'white'
                         },
                         'border-color': color
                     }">
