--- a/cast-custom-receiver/file.html
+++ b/cast-custom-receiver/file.html
@@ -25,7 +25,7 @@ limitations under the License.
             <!-- ko foreach: deck -->
                 <div class="card" data-bind="
                     style: {
-                        'background-color': color,
+                        'background-color': 'white',
                         'color': function() {
                             return (color() == 'black') ? 'black' : 'white'
                         },
