--- a/cast-custom-receiver/file.html
+++ b/cast-custom-receiver/file.html
@@ -26,7 +26,7 @@ limitations under the License.
                 <div class="card" data-bind="
                     style: {
                         'background-color': color,
-                        'color': 'white',
+                        'color': oppositeColor,
                         'border-color': color
                     }">
                     <span data-bind="text: name"></span>
