all cards submitted

--- a/cast-custom-receiver/file.html
+++ b/cast-custom-receiver/file.html
@@ -39,7 +39,7 @@ limitations under the License.
                 <tbody data-bind="foreach: clients">
                     <tr>
                         <td data-bind="text: 'Player '+($index() + 1)"></td>
-                        <td style="font-weight:bold" data-bind="score"></td>
+                        <td style="font-weight:bold" data-bind="text: score"></td>
                     </tr>
             </tbody>
             </table>
