--- a/cast-custom-receiver/file.html
+++ b/cast-custom-receiver/file.html
@@ -38,7 +38,7 @@ limitations under the License.
             <table>
                 <tbody data-bind="foreach: clients">
                     <tr>
-                        <td data-bind="text: 'Player '+($index() + 1)"></td>
+                        <td data-bind="text: 'Player '+($index() + 1)+': '"></td>
                         <td style="font-weight:bold" data-bind="text: score"></td>
                     </tr>
             </tbody>
